--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./src/assets/target-symbol.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/p-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photagenix</title>
   </head>
